--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
- 
+  fluttertoast: ^7.1.8
   font_awesome_flutter: ^8.11.0
   google_fonts: ^1.1.1
   firebase_auth: ^0.18.0+1
-
+  geoflutterfire: ^2.0.2
+  cloud_firestore: ^0.14.0+1
+  google_maps_flutter: ^1.0.6
   provider: ^3.1.0
   firebase_core: ^0.5.0
+  location: ^3.0.1
 
 dev_dependencies:
   flutter_test:
