--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cloud_firestore: ^0.14.0+1
   google_maps_flutter: ^1.0.6
   provider: ^3.1.0
+  geolocator: ^6.1.5
+  geocoding: ^1.0.5
   firebase_core: ^0.5.0
   location: ^3.0.1
 
